config/ephemeral/test/claiming/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-frontend-test
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app-frontend-test
  template:
    metadata:
      labels:
        app: demo-app-frontend-test
    spec:
      containers:
      - name: demo-app-frontend-test
        image: demo-app/frontend:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        env:
        - name: NGINX_PORT
          value: "8080"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          # seccompProfile: "RuntimeDefault" # "Localhost"
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-frontend-test
  namespace: demo-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: demo-app-frontend-test
